@@ -26,8 +26,15 @@
 
 $DB->BeginTrans();
 
-$DB->Execute("ALTER TABLE passwd ADD COLUMN quota_sql integer NOT NULL DEFAULT 0");
-$DB->Execute("ALTER TABLE domains ADD COLUMN ownerid integer NOT NULL DEFAULT 0");
+$DB->Execute("ALTER TABLE passwd ADD COLUMN quota_sql integer");
+$DB->Execute("UPDATE passwd SET quota_sql = 0");
+$DB->Execute("ALTER TABLE passwd ALTER COLUMN quota_sql SET NOT NULL");
+$DB->Execute("ALTER TABLE passwd ALTER COLUMN quota_sql SET DEFAULT 0");
+
+$DB->Execute("ALTER TABLE domains ADD COLUMN ownerid integer");
+$DB->Execute("UPDATE domains SET ownerid = 0");
+$DB->Execute("ALTER TABLE domains ALTER COLUMN ownerid SET NOT NULL");
+$DB->Execute("ALTER TABLE domains ALTER COLUMN ownerid SET DEFAULT 0");
 
 $DB->Execute("CREATE INDEX passwd_ownerid_idx ON passwd (ownerid)");
 $DB->Execute("CREATE INDEX domains_ownerid_idx ON domains (ownerid)");
