@@ -26,7 +26,11 @@
 
 $DB->BeginTrans();
 
-$DB->Execute("ALTER TABLE assignments ADD COLUMN nodeid integer NOT NULL DEFAULT 0");
+$DB->Execute("ALTER TABLE assignments ADD COLUMN nodeid integer");
+$DB->Execute("UPDATE assignments SET nodeid = 0");
+$DB->Execute("ALTER TABLE assignments ALTER COLUMN nodeid SET NOT NULL");
+$DB->Execute("ALTER TABLE assignments ALTER COLUMN nodeid SET DEFAULT 0");
+
 $DB->Execute("CREATE INDEX assignments_nodeid_idx ON assignments (nodeid)");
 $DB->Execute("CREATE INDEX assignments_customerid_idx ON assignments (customerid)");
 
