@@ -1,5 +1,11 @@
 $Id$
 
+version ? (????-??-??):
+
+  - fixed upgrade scripts for PostgreSQL versions that do not support
+    "ALTER TABLE ... ADD ... NOT NULL DEFAULT ...": 2006061200, 2006082300,
+    2006081000 (alec) 
+
 version 1.9.3 Zarin (2006-09-19):
 
   - cosmetics on search templates (djrzulf)
